[package]
name = "readysetlog"
version = "0.1.0"
authors = ["Timothy Andrew <mail@timothyandrew.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
futures = "0.3"
warp = "0.2"
bytes = "0.5.4"